added login and destroy sessions

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,2 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+gregory:
+  name: Gregory Example
+  email: gregory@example.com
+  password_digest: <%= User.digest('password') %>
